Mon Oct 30 21:57:20 2006  Tim Janik  <timj@gtk.org>

	* tests/filtertest.cc: applied some correcitons suggested by Stefan.
	fixed frequency range loops to test both frequency bounds.
	extended exit_with_iir_filter_gnuplot() to print the filter design.
	assert allmost 0-gain for all filters. simplified tests somewhat.
	added low/high pass and band stop/pass chebyshev1 filters.

Mon Oct 30 01:25:56 2006  Tim Janik  <timj@gtk.org>

	* tests/filtertest.cc: new test for the new IIR filter design API.
	currently covers Butterworth low pass, high pass, band stop and
	band pass filter tests. tests are based on coefficient comparisons,
	filter transfer function analysis, and zero + pole function
	analysis. for debugging purposes, provided the possibility to
	prematurely abort filter tests and provide a gnuplot dump.

Mon Oct 30 00:55:01 2006  Tim Janik  <timj@gtk.org>

        * bsefilter.cc: implement bse_iir_filter_kind_string(),
	bse_iir_filter_type_string(), bse_iir_filter_request_string(),
	bse_iir_filter_design_string(). implemented bse_iir_filter_design()
	as a thin wrapper around _bse_filter_design_ellf().

	* bsemath.h: include complex.h or complex, depending on C / C++.
	provide ComplexFloat, ComplexDouble, ComplexLongDouble and
	Complex as alias for ComplexDouble.

Mon Oct 30 00:47:23 2006  Tim Janik  <timj@gtk.org>

	* bsefilter.h: new header for offering a unified IIR filter API.

	* bsefilter-ellf.c: define _GNU_SOURCE instead of _ISOC99_SOURCE before
	including any headers. this gets us the C99 API *and* GNU features
	(i.e. the uint typedef).
	split up the implementation so that the current stand-alone behavior
        is preserved if ELLF_BEHAVIOR is defined and so that the necessary
        contents from bseellipticfilter.h are inlined otherwise.
        moved EllfDesignState here (from bseellipticfilter.h). renamed
        EllfComplex.
        _bse_filter_design_ellf(): implemented library function prototyped